Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <h1>Labs London Ideas Vote</h1>
+  <audio controls="controls" id="audioPlayer">
+  Your browser does not support the <code>audio</code> element.
+  <source src="countdown.mp3" type="audio/mpeg">
+  </audio>
   <div id="holder"></div>
   <div id="totals"></div>
+  <div id="winningImage"></div>
 
-  <input type="button" id="buttonid" value="click">
+  <!--<input type="button" id="buttonid" value="click">-->
   <script src="js/raphael-min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/g.raphael-min.js"></script>
