more work on layout

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
   <h1>Labs London Ideas Vote</h1>
+  <a href="http://bit.ly/votelabs">http://bit.ly/votelabs</a>
   <audio controls="controls" id="audioPlayer">
   Your browser does not support the <code>audio</code> element.
   <source src="countdown.mp3" type="audio/mpeg">
   </audio>
+
   <div id="holder"></div>
-  <div id="totals"></div>
-  <div id="winningImage"></div>
+
+  <div id="winningImage" ></div>
+  <div id="total" ></div>
 
   <!--<input type="button" id="buttonid" value="click">-->
   <script src="js/raphael-min.js"></script>
